See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.88.00

19.06.28 BJH  Release 10.87.00

              pamfind: Add -machine .

              Multiple: fix bug: when you specify the same option twice, you
              can get a syntax error, with the message telling you you
              specified some other option that conflicts with it.  Should just
              take the last setting.

              pnmtopng: Fix bug: Defaults to no filters.  Should be all
              filters.  Effect is larger PNG output.  Broken after Netpbm
              10.26 (January 2005) but no later than Netpbm 10.35 (August
              2006).

              pnmtopng: Fix bug: Doesn't allow multiple filter options.
              Broken after Netpbm 10.26 (January 2005) but no later than
              Netpbm 10.35 (August 2006).

              pnmcrop: Don't allow -borderfile with -reportXXX.  It doesn't
              work.

              pnmcrop: fix bug: -bgcolor doesn't work.  Always present
              (-bgcolor was introduced in Netpbm 10.86 (March 2019)).

              pbmtext: fix bug: don't ignore -builtin when specified with
              -font.  Fail with syntax error instead.

              pbmtozinc: fix wrong output on big-endian machines.  Broken in
              Netpbm 10.71 (June 2015).

              pbmpage: Fix error message for invalid syntax.

              pamtris: Fix bug: debug trace left in

19.03.30 BJH  Release 10.86.00

              Add pamfind.

              Add pambrighten.

              Add pamhue.

              pnmcrop: Add -bg-color, bg-corner, -reportfull, -reportsize,
              -blank-image .

              pamtopng: Add -interlace .

              pamenlarge: Add -scale, -xscale, -yscale .

              pamenlarge: Much faster for PBM with xscale factor above 10;
              slightly faster for xscale factor 2-10.
